--- a/freicar_aruco_detect/package.xml
+++ b/freicar_aruco_detect/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>freicar_aruco_detection</name>
+  <name>freicar_aruco_detect</name>
   <version>0.0.0</version>
-  <description>The freicar_aruco_detection package</description>
+  <description>The freicar_aruco_detect package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/freicar_aruco_detection</url> -->
+  <!-- <url type="website">http://wiki.ros.org/freicar_aruco_detect</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,30 +49,18 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>cv-bridge</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>image_transport</build_depend>
-  <build_depend>cv_bridge</build_depend>
-  <build_depend>freicar_common</build_depend>
-  <build_depend>freicar_sign_detect</build_depend>
+  <build_export_depend>cv-bridge</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
-  <build_export_depend>image_transport</build_export_depend>
-  <build_export_depend>cv_bridge</build_export_depend>
-  <build_export_depend>freicar_common</build_export_depend>
-  <build_export_depend>freicar_sign_detect</build_export_depend>
+  <exec_depend>cv-bridge</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>image_transport</exec_depend>
-  <exec_depend>cv_bridge</exec_depend>
-  <exec_depend>freicar_common</exec_depend>
-  <exec_depend>freicar_sign_detect</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
